<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="base_app_url">http://192.168.43.111:8080/cbtls/</string>
    <string name="app_name">CBTLS Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="train_line_prompt">Select Train Line</string>
    <string name="from_station_prompt">Select From Station</string>
    <string name="to_station_prompt">Select To Station</string>
    <string name="next_train">Next train</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="show_advanced_filter">Show Advanced Filter</string>
    <string name="hide_advanced_filter">Hide Advanced Filter</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="pick_a_time">Pick a Time</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="search"> Search</string>
    <string name="search_train"> Search Train</string>
    <string name="title_activity_view_train_schedules">View Train Schedules</string>
    <string name="view_train_schedules">View Train Schedules</string>
    <string name="view_train_schedule_details">View Train Schedule Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="depature">Depature</string>
    <string name="arrival">Arrival</string>
    <string name="duration">Duration(h)</string>
    <string name="view">View</string>
    <string name="view_recommendations">View Recommendations</string>
    <string name="search_again">Search Again</string>
    <string name="select">Select</string>
    <string name="title_activity_view_recommendation">View Recommendations</string>
    <string name="train_recommendation_description">Trains are listed based on rankings from best to worst, trains are ranked 
        based on historical data</string>
    <string name="ok">Ok</string>
    <string name="title_activity_view_train_schedule_details">View Train Schedule Details</string>
    <string name="train_details">Train Details :-</string>
    <string name="start_station">Start Station :-</string>
    <string name="destination_station">Destination Station :-</string>
    <string name="etas">ETA at Start Station :-</string>
    <string name="etad">ETA at Destination :-</string>
    <string name="total_distance_of_journey">Total Distance of Journey :-</string>
    <string name="total_duration_of_journey">Total Duration of Journey :-</string>
    <string name="train_type">Train Type :-</string>
    <string name="train_frequency">Train Frequency :-</string>
    <string name="utl_in_the_train">Update Train Location(I am in the train)</string>
    <string name="utl_outside_the_train">Update Train Location(I am outside the train)</string>
    <string name="view_train_location">View Train Location</string>
    <string name="view_analysis_of_the_train">View analysis</string>
    <string name="add_to_favourites">Add to Favorites</string>
    <string name="title_activity_active_update_location">Active Update Location</string>
    <string name="active_update_location_title">Update Train Location (I\'m in the train)</string>
    <string name="previous_station">Previous Station</string>
    <string name="update_once">Update Once</string>
    <string name="update_and_track">Update and Track</string>
    <string name="update_compartment_details">Update Compartment Details</string>
    <string name="set_alarm_clock">Set Alarm Clock</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="title_activity_update_compartment_details">Update Compartment Details - CBTLS</string>
    <string name="title_activity_notification_alarm">Set Notification Alarm - CBTLS</string>
    <string name="compartment_number">Compartment Number</string>
    <string name="total_compartments">Total Compartments</string>
    <string name="crowd_density_of_compartment">Crowd Density of Compartment</string>
    <string name="overall_crowd_density">Overall Crowd Density</string>
    <string name="update">Update</string>
    <string name="go_back">Go Back</string>
    <string name="title_activity_passive_update_location">Update Train Location (Outside Train)</string>
    <string name="train_current_status">Current Status of Train</string>
    <string name="update_train_location_outside_train">Update Train Location (I\'m outside the train)</string>
    <string name="last_station_passed">Last Station Passed</string>
    <string name="select_located_time">Select located Time</string>
    <string name="set_notification_alarm">Set Notification Alarm</string>
    <string name="select_destination_station">Select Destination Station</string>
    <string name="select_an_option">Select An Option</string>
    <string name="distance_to_set_alarm">Distance to set Alarm(in Km)</string>
    <string name="set_distance_to_ring_alarm">Set Distance to Ring Alarm</string>
    <string name="ring_alarm_before_1_station">Ring Alarm Before 1 Station</string>
    <string name="ring_alarm_at_the_station">Ring Alarm at the Station</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="title_activity_view_train_location">View Train Location</string>

</resources>
