<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.nadee.cbtls.activity.MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >
            
            <TextView
	            android:id="@+id/textView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center_horizontal"
	            android:text="@string/search_train"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <Spinner
                android:id="@+id/spinner_train_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:prompt="@string/train_line_prompt" />

            <Spinner
                android:id="@+id/spinner_from_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:prompt="@string/from_station_prompt" />

            <Spinner
                android:id="@+id/spinner_to_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:prompt="@string/to_station_prompt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dip" >

            <Button
                android:id="@+id/btn_next_train"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/global_button"
                android:padding="5dip"
                android:text="@string/next_train"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_today_schedule"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/global_button"
                android:padding="5dip"
                android:text="@string/today_schedule"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_advanced_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/global_button"
                android:padding="5dip"
                android:text="@string/show_advanced_filter"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_Advanced_Filter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout2"
            android:layout_margin="10dip"
            android:orientation="vertical"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_pick_a_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/global_button"
                android:text="@string/pick_a_date"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pick_a_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/pick_a_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dip" >

                <Button
                    android:id="@+id/btn_from_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/global_button"
                    android:padding="5dip"
                    android:text="@string/from_time"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_to_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/global_button"
                    android:padding="5dip"
                    android:text="@string/to_time"
                    android:textColor="@color/white" />
                
                
                 
            </LinearLayout>
            
             <Button
		            android:id="@+id/btn_search"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/global_button"
		            android:text="@string/search"
		            android:textColor="@color/white" />
            
        </LinearLayout>

       

        
        
    </RelativeLayout>

</ScrollView>