<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.nadee.cbtls.activity.NotificationAlarmActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/set_notification_alarm"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/select_destination_station" />
            
            <Spinner
                android:id="@+id/spinner_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:prompt="@string/last_station_passed" />
            
            
             <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/select_an_option" />
            
            <Spinner
                android:id="@+id/spinner_alarm_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:prompt="@string/select_an_option" />
            

             <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/distance_to_set_alarm" />
             
             <NumberPicker
	                    android:id="@+id/numberPicker_compartment_number"
	                    android:layout_width="wrap_content"
	                    android:layout_gravity="center"
	                	android:gravity="center"
	                    android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_set_alarm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/global_button"
                    android:padding="5dip"
                    android:text="@string/set_alarm"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_go_back"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/global_button"
                    android:padding="5dip"
                    android:text="@string/go_back"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

           
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
